<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:app="http://schemas.android.com/apk/res-auto"
	android:layout_width="match_parent"
	android:layout_height="match_parent">

	<androidx.appcompat.widget.Toolbar
		android:id="@+id/toolbarView"
		android:layout_width="match_parent"
		android:layout_height="?attr/actionBarSize"
		android:background="@color/colorAccent"
		app:title="@string/users_list_screen_toolbar_title"
		app:layout_constraintEnd_toEndOf="parent"
		app:layout_constraintStart_toStartOf="parent"
		app:layout_constraintTop_toTopOf="parent"
		app:titleTextColor="@color/text_color_white" />

	<androidx.swiperefreshlayout.widget.SwipeRefreshLayout
		android:id="@+id/refreshView"
		android:layout_width="match_parent"
		android:layout_height="0dp"
		app:layout_constraintBottom_toBottomOf="parent"
		app:layout_constraintEnd_toEndOf="parent"
		app:layout_constraintStart_toStartOf="parent"
		app:layout_constraintTop_toBottomOf="@+id/toolbarView">

		<androidx.recyclerview.widget.RecyclerView
			android:id="@+id/itemsView"
			android:layout_width="match_parent"
			android:layout_height="match_parent" />

	</androidx.swiperefreshlayout.widget.SwipeRefreshLayout>

	<ProgressBar
		android:id="@+id/progressView"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:indeterminate="true"
		android:visibility="invisible"
		app:layout_constraintBottom_toBottomOf="parent"
		app:layout_constraintEnd_toEndOf="parent"
		app:layout_constraintStart_toStartOf="parent"
		app:layout_constraintTop_toTopOf="parent" />

	<LinearLayout
		android:id="@+id/throwableView"
		android:layout_width="match_parent"
		android:layout_height="match_parent"
		android:background="@color/background_color_white"
		android:gravity="center"
		android:visibility="gone"
		android:orientation="vertical">

		<androidx.appcompat.widget.AppCompatImageView
			android:layout_width="200dp"
			android:layout_height="200dp"
			android:layout_gravity="center"
			android:layout_margin="6dp"
			android:scaleType="centerCrop"
			android:src="@drawable/ic_throwable" />

		<androidx.appcompat.widget.AppCompatTextView
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_gravity="center_horizontal"
			android:layout_margin="12dp"
			android:fontFamily="@font/montserrat"
			android:text="@string/throwable_check_internet_connection"
			android:textAlignment="center"
			android:textSize="22sp" />

		<androidx.appcompat.widget.AppCompatButton
			android:id="@+id/retryView"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_margin="12dp"
			android:elevation="6dp"
			android:background="@color/colorAccent"
			android:textColor="@color/text_color_white"
			android:text="@string/retry_button_title"/>

	</LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>