<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:app="http://schemas.android.com/apk/res-auto"
	xmlns:tools="http://schemas.android.com/tools"
	android:layout_width="match_parent"
	android:layout_height="match_parent"
	android:background="@color/text_color_white">

	<LinearLayout
		android:id="@+id/toolbarView"
		android:layout_width="match_parent"
		android:layout_height="?attr/actionBarSize"
		android:background="@color/colorAccent"
		android:gravity="center_vertical|start"
		app:layout_constraintEnd_toEndOf="parent"
		app:layout_constraintStart_toStartOf="parent"
		app:layout_constraintTop_toTopOf="parent"
		app:titleTextColor="@color/text_color_white">

		<androidx.appcompat.widget.AppCompatImageView
			android:id="@+id/toolbarBackView"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_marginStart="12dp"
			android:clickable="true"
			android:focusable="true"
			android:src="@drawable/ic_arrow_back" />

		<androidx.appcompat.widget.AppCompatTextView
			android:id="@+id/toolbarTitleView"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_marginStart="24dp"
			android:textColor="@color/text_color_white"
			android:textSize="24sp"
			tools:text="User login" />

	</LinearLayout>

	<androidx.appcompat.widget.AppCompatImageView
		android:id="@+id/avatarView"
		android:layout_width="200dp"
		android:layout_height="200dp"
		android:layout_marginTop="12dp"
		android:scaleType="centerCrop"
		app:layout_constraintEnd_toEndOf="parent"
		app:layout_constraintStart_toStartOf="parent"
		app:layout_constraintTop_toBottomOf="@+id/toolbarView"
		tools:src="@drawable/ic_no_image" />

	<androidx.appcompat.widget.AppCompatTextView
		android:id="@+id/userNameView"
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:layout_marginTop="12dp"
		android:textAlignment="center"
		android:textColor="@color/text_color_black"
		android:textSize="32sp"
		app:layout_constraintEnd_toEndOf="parent"
		app:layout_constraintStart_toStartOf="parent"
		app:layout_constraintTop_toBottomOf="@+id/avatarView"
		tools:text="Laclara Jones" />

	<androidx.appcompat.widget.AppCompatTextView
		android:id="@+id/emailView"
		style="@style/CaptionPrimary"
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:layout_margin="12dp"
		android:layout_marginTop="12dp"
		android:textAlignment="center"
		app:layout_constraintEnd_toEndOf="parent"
		app:layout_constraintStart_toStartOf="parent"
		app:layout_constraintTop_toBottomOf="@+id/userNameView"
		tools:text="www.laclarajones.com" />

	<LinearLayout
		android:id="@+id/reposContainerView"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_margin="12dp"
		android:orientation="horizontal"
		app:layout_constraintEnd_toStartOf="@+id/gistsContainerView"
		app:layout_constraintHorizontal_bias="0.5"
		app:layout_constraintHorizontal_chainStyle="spread"
		app:layout_constraintStart_toStartOf="parent"
		app:layout_constraintTop_toBottomOf="@+id/emailView">

		<androidx.appcompat.widget.AppCompatTextView
			android:id="@+id/reposTitleView"
			style="@style/BaseText"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:text="@string/detail_screen_repos_title" />

		<androidx.appcompat.widget.AppCompatTextView
			android:id="@+id/reposCountView"
			style="@style/BaseText"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_marginStart="4dp"
			tools:text="9" />
	</LinearLayout>

	<LinearLayout
		android:id="@+id/gistsContainerView"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_margin="12dp"
		android:orientation="horizontal"
		app:layout_constraintEnd_toEndOf="parent"
		app:layout_constraintEnd_toStartOf="@+id/followersContainerView"
		app:layout_constraintHorizontal_bias="0.5"
		app:layout_constraintStart_toEndOf="@+id/reposContainerView"
		app:layout_constraintTop_toBottomOf="@+id/emailView">

		<androidx.appcompat.widget.AppCompatTextView
			android:id="@+id/gistsTitleView"
			style="@style/BaseText"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:text="@string/detail_screen_gists_title" />

		<androidx.appcompat.widget.AppCompatTextView
			android:id="@+id/gistsCountView"
			style="@style/BaseText"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_marginStart="4dp"
			tools:text="4" />

	</LinearLayout>

	<LinearLayout
		android:id="@+id/followersContainerView"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_margin="12dp"
		android:orientation="horizontal"
		app:layout_constraintEnd_toEndOf="parent"
		app:layout_constraintHorizontal_bias="0.5"
		app:layout_constraintStart_toEndOf="@+id/gistsContainerView"
		app:layout_constraintTop_toBottomOf="@+id/emailView">

		<androidx.appcompat.widget.AppCompatTextView
			android:id="@+id/followersTitleView"
			style="@style/BaseText"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:text="@string/detail_screen_followers_title" />

		<androidx.appcompat.widget.AppCompatTextView
			android:id="@+id/followersCountView"
			style="@style/BaseText"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_marginStart="4dp"
			tools:text="4" />

	</LinearLayout>

	<ProgressBar
		android:id="@+id/progressView"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:indeterminate="true"
		android:visibility="gone"
		app:layout_constraintBottom_toBottomOf="parent"
		app:layout_constraintEnd_toEndOf="parent"
		app:layout_constraintStart_toStartOf="parent"
		app:layout_constraintTop_toTopOf="parent" />

	<LinearLayout
		android:id="@+id/throwableView"
		android:layout_width="match_parent"
		android:layout_height="match_parent"
		android:background="@color/background_color_white"
		android:gravity="center"
		android:orientation="vertical"
		android:visibility="gone">

		<androidx.appcompat.widget.AppCompatImageView
			android:layout_width="200dp"
			android:layout_height="200dp"
			android:layout_gravity="center"
			android:layout_margin="6dp"
			android:scaleType="centerCrop"
			android:src="@drawable/ic_throwable" />

		<androidx.appcompat.widget.AppCompatTextView
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_gravity="center_horizontal"
			android:layout_margin="12dp"
			android:fontFamily="@font/montserrat"
			android:text="@string/throwable_check_internet_connection"
			android:textAlignment="center"
			android:textSize="22sp" />

		<androidx.appcompat.widget.AppCompatButton
			android:id="@+id/retryView"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_margin="12dp"
			android:background="@color/colorAccent"
			android:elevation="6dp"
			android:text="@string/retry_button_title"
			android:textColor="@color/text_color_white" />

	</LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>